--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Thermometer.Thermometer"></activity>
+        <activity android:name=".security.SecurityOptions"></activity>
+        <activity android:name=".Thermometer.Thermometer" />
         <activity android:name=".SmartLights.SmartLights" />
         <activity android:name=".security.Security" />
         <activity android:name=".MainActivity">
